--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.5",
     "ngx-toastr": "^14.2.1",
